# Rust

./: .gitignore
basics/: Cargo.toml
basics/src/: main.rs
basics/src/conditional/: add_fn.rs  bmi_calculator.rs  condtion.rs  data.rs  first.rs
