[package]
name = "basics"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "conditional"
path = "src/conditional/first.rs"
[[bin]]
name = "data"
path = "src/conditional/data.rs"

[[bin]]
name = "add_fn"
path = "src/conditional/add_fn.rs"
[[bin]]
name = "bmi_calculator"
path = "src/conditional/bmi_calculator.rs"
[[bin]]
name = "condition"
path = "src/conditional/condtion.rs"
[dependencies]
